--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/x-date-pickers": "^5.0.9",
     "@types/jwt-decode": "^3.1.0",
     "@types/moment": "^2.13.0",
+    "antd": "^5.20.6",
     "axios": "^0.27.2",
     "dayjs": "^1.11.6",
     "flowbite": "^1.6.6",
